# finance-ally

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: change-reviewer.md  reviewer.md
.claude/commands/: doc-review.md
backend/: README.md  config.py  database.py  main.py  pyproject.toml  tasks.py
backend/.claude/: settings.json
backend/market/: __init__.py  base.py  factory.py  massive.py  simulator.py  types.py
backend/model/: models.py  seed.py
backend/models/: __init__.py  chat_message.py  portfolio_snapshot.py  position.py  seed.py  trade.py  user_profile.py  watchlist.py
backend/routes/: chat.py  health.py  portfolio.py  stream.py  watchlist.py
backend/services/: context.py  executor.py  llm.py
backend/tests/: test_chat.py  test_massive.py  test_portfolio.py  test_simulator.py  test_stream.py  test_watchlist.py
docs/: TEST_COVERAGE_REPORT.md
frontend/: next.config.ts  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
planning/: MARKET_DATA_SUMMARY.md  MASSIVE_API.md  PLAN.md  PROJECT_STATUS.md  REVIEW.md
planning/archive/: JIRA_EPICS_PLAN.md  MARKET_DATA_DESIGN.md  MARKET_INTERFACE.md  MARKET_SIMULATOR.md  REVIEW.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
test/tests/: fresh-start.spec.ts  portfolio-chat.spec.ts  sse-resilience.spec.ts  trading.spec.ts  watchlist.spec.ts
(+37 files in other folders)
